--- a/code.ipynb
+++ b/code.ipynb
@@ -267,6 +267,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Results:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -294,7 +301,6 @@
     "results_df = pd.DataFrame(results).T\n",
     "print(results_df)\n",
     "\n",
-    "# Find the best model based on RMSE\n",
     "best_model_name = results_df['RMSE'].idxmin()\n",
     "best_model = models[best_model_name]\n",
     "print(f\"\\nBest Model: {best_model_name}\")\n",
@@ -325,10 +331,8 @@
     }
    ],
    "source": [
-    "# Evaluate the best model\n",
     "y_pred = best_model.predict(X_test)\n",
     "\n",
-    "# Plot Actual vs Predicted\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.scatter(y_test, y_pred, alpha=0.7, color='blue')\n",
     "plt.plot([min(y_test), max(y_test)], [min(y_test), max(y_test)], 'r--', lw=2)\n",
@@ -339,12 +343,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Save results:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the results to a CSV file\n",
     "results_df.to_csv(\"model_results.csv\", index_label=\"Model\")"
    ]
   }
